--- a/templates/profile.html
+++ b/templates/profile.html
@@ -7,15 +7,28 @@
 			{{ $favouritemode := _or $gqm .favourite_mode }}
 			<script>
 				window.favouriteMode = {{ $favouritemode }};
-				window.userID = {{ .id }};
+				window.userID = '{{ .id }}';
 			</script>
 			{{ if after .silence_info.end }}
 				<div class="ui error centered message">{{ $global.T "User is <b>silenced</b> for %s, expires %s." (.silence_info.reason | htmlescaper) (time .silence_info.end) | html }}</div>
 			{{ end }}
+						
+			{{ $AngelVaxei  := has .id 1002 }}
+			{{ $My_Angel_Vaxei  := has .id 1000 }}
+			{{ $fokabot  := has .id 999 }}
+			
+			{{ $super := has .privileges 7340031 }}
+			{{ $dev  := has .privileges 3129343 }}
+			{{ $admin  := has .privileges 3047935 }}
+			{{ $chatmod  := has .privileges 786763 }}
+			{{ $bat  := has .privileges 267 }}
+			
 			{{ if hasAdmin $global.Context.User.Privileges }}
 				{{ $restr := not (has .privileges 1) }}
 				{{ $disab := not (has .privileges 2) }}
 				{{ $pend  := has .privileges 1048576 }}
+				
+				
 				{{ if and $disab $restr }}
 					{{ if $pend }}
 						<div class="ui warning centered message">{{ $global.T "User is <b>%s</b>" "pending verification" | html }}.</div>
@@ -50,7 +63,17 @@
 					</div>
 					<div class="table element">
 						<h1 class="ui header">
+						{{ if $super }}
+						<div class="owner">
 							{{ .username }}
+						</div>
+						{{else if $dev}}
+						<div class="dev">
+							{{ .username }}
+						</div>
+						{{ else }}
+							{{ .username }}
+						{{ end }}	
 						</h1>
 						{{ if .username_aka }}
 							<div class="subtitle">
@@ -77,15 +100,8 @@
 								</button>
 							{{ end }}
 							{{ if eq $global.Context.User.ID $global.UserID }}
-								<a href="/settings" class="ui circular mini teal icon button"
-									title="{{ $global.T "Settings" }}">
+								<a href="/settings" class="ui circular mini teal icon button">
 									<i class="edit icon"></i>
-								</a>
-							{{ end }}
-							{{ if hasAdmin $global.Context.User.Privileges }}
-								<a href="https://old.ripple.moe/index.php?p=103&id={{ $global.UserID }}"
-									target="_blank" title="Quick edit" class="ui circular mini blue icon button">
-									<i class="folder open outline icon"></i>
 								</a>
 							{{ end }}
 						</div>
@@ -102,8 +118,30 @@
 				<div class="ui three column divided stackable grid">
 					<div class="row">
 						<div class="column">
-							{{ $global.T "<b>%s</b> is a Ripple player from <b>%s</b>." .username (country .country true) | html }}
-							<br>{{ $global.T "They signed up on Ripple %s." (time $user.registered_on) | html }}
+							{{ if $super }}
+								{{ $global.T "<b>%s</b> " .username | html }}
+								 is an <i class="red code small icon"></i><b>Owner</b> 
+								{{ $global.T " from <b>%s</b>." (country .country true) | html }}
+								{{else if $dev}}
+								{{ $global.T "<b>%s</b> " .username | html }}
+								 is a <i class="blue code small icon"></i><b>Developer</b> 
+								{{ $global.T " from <b>%s</b>." (country .country true) | html }}
+								{{else if $admin}}
+								{{ $global.T "<b>%s</b> " .username | html }}
+								 is an <i class="red lightning small icon"></i><b>Administrator</b> 
+								{{ $global.T " from <b>%s</b>." (country .country true) | html }}
+								{{else if $chatmod}}
+								{{ $global.T "<b>%s</b> " .username | html }}
+								 is a <i class="purple star small icon"></i><b>Chat Mod</b> 
+								{{ $global.T " from <b>%s</b>." (country .country true) | html }}
+								{{else if $bat}}
+								{{ $global.T "<b>%s</b> " .username | html }}
+								 is a <i class="orange music small icon"></i><b>BAT</b> 
+								{{ $global.T " from <b>%s</b>." (country .country true) | html }}
+							{{ else }}
+								{{ $global.T "<b>%s</b> is a player from <b>%s</b>." .username (country .country true) | html }}
+							{{ end }}
+							<br>{{ $global.T "They registered %s." (time $user.registered_on) | html }}
 							<br>{{ $global.T "Last seen: %s." (time $user.latest_activity) | html }}
 							<br>{{ with playstyle .play_style $global }}{{ $global.T "They play with %s." . }}{{ end }}
 						</div>
@@ -112,10 +150,13 @@
 								{{ $global.T "This user hasn't got any badges!" }}
 							{{ else }}
 								<div class="ui grid">
+								
 									{{ range .badges }}
 										<div class="eight wide centered column">
 											<i class="circular {{ faIcon .icon }} big icon"></i><br>
 											<b>{{ .name }}</b>
+											
+											
 										</div>
 									{{ end }}
 									{{ with .custom_badge }}
@@ -124,9 +165,11 @@
 											<b><i>{{ .name }}</i></b>
 										</div>
 									{{ end }}
+									
 								</div>
 							{{ end }}
 						</div>
+						
 						<div class="column">
 							{{ range $k, $v := (slice .std .taiko .ctb .mania) }}
 								<div data-mode="{{ $k }}" {{ if ne $k (int $favouritemode) }} hidden{{ end }}>
@@ -185,22 +228,12 @@
 					</div>
 				</div>
 			</div> <!-- end grid segment -->
+
 			<div id="scores-zone">
 				{{ range _range 4 }}
 					<div data-mode="{{ . }}" {{ if ne . (int $favouritemode) }} hidden{{ end }} data-loaded="0">
 					</div>
 				{{ end }}
-			</div>
-
-			<div class="ui segment">
-				<h2 class="ui header">{{ $global.T "Achievements" }}</h2>
-				<div id="achievements" class="ui grid">
-				</div>
-				<div class="right aligned">
-					<button class="ui disabled button" id="load-more-achievements">
-						{{ $global.T "Load more" }}
-					</button>
-				</div>
 			</div>
 			<div class="ui modal">
 				<i class="close icon"></i>
@@ -210,6 +243,6 @@
 				</div>
 			</div>
 		{{ end }}
-	{{ end }}
+		{{ end }}
 </div>
 {{ end }}
