--- a/templates/supporte.html
+++ b/templates/supporte.html
@@ -1,7 +1,7 @@
 {{/*###
-Handler=/donate
-TitleBar=Support Akatsuki
-KyutGrill=fundmyautism.jpg
+Handler=/donate2
+TitleBar=Support cmyui.com
+KyutGrill=donate2.png
 AdditionalJS=https://cdnjs.cloudflare.com/ajax/libs/noUiSlider/9.0.0/nouislider.min.js
 */}}
 {{ define "tpl" }}
@@ -32,16 +32,16 @@ AdditionalJS=https://cdnjs.cloudflare.com/ajax/libs/noUiSlider/9.0.0/nouislider.
 			</div>
 			<div class="ui segment">
 				<h3 class="ui header no top margin">
-					<i class="money icon"></i><div class="content">{{ $.T "Akatsuki is not cheap to run." }}</div>
+					<i class="money icon"></i><div class="content">{{ $.T "Germanzu is not cheap to run." }}</div>
 				</h3>
 				<blockquote>
-					{{ $.T "While we provide this service for free, we still have to pay for it, and if we always took the money out of our own pockets, 1. we would be broke, 2. we wouldn't be able to upgrade our hardware to accomodate our users. While we do have loads of software optimisations that allow us to have Akatsuki run crazy fast while still being on not so high-end hardware, the more users we have, the higher-end our hardware needs to be. So we are asking you for help on this :)." }}
+					{{ $.T "While we provide this service for free, we still have to pay for it, and if we always took the money out of our own pockets, 1. we would be broke, 2. we wouldn't be able to upgrade our hardware to accomodate our users. While we do have loads of software optimisations that allow us to have Germanzu run crazy fast while still being on not so high-end hardware, the more users we have, the higher-end our hardware needs to be. So we are asking you for help on this :)." }}
 				</blockquote>
 				<h3 class="ui header">
 					<i class="book icon"></i><div class="content">{{ $.T "We are still students." }}</div>
 				</h3>
 				<blockquote>
-					{{ $.T "Akatsuki developers, and most of the Akatsuki staff, do not have a day job. This means that we get most of our income as students from doing small jobs as \"freelancers\" every so often, or, you know, allowance." }}
+					{{ $.T "Germanzu developers, and most of the cmyu!relax staff, do not have a day job. This means that we get most of our income as students from doing small jobs as \"freelancers\" every so often, or, you know, allowance." }}
 				</blockquote>
 				<h3 class="ui header">
 					<i class="mouse pointer icon"></i><div class="content">{{ $.T "We do not have ads. And never will." }}</div>
@@ -107,7 +107,7 @@ AdditionalJS=https://cdnjs.cloudflare.com/ajax/libs/noUiSlider/9.0.0/nouislider.
 					{{ $.T "And this is how you pay" }}
 				</h4>
 				<p>
-					{{ $.T "You may donate through <b>PayPal</b> (or credit/debit card linked to PayPal). Use the slider below to choose the amount of months you'd like to have the donor benefits, and the cost will be instantly calculated. The more months you purchase, the bigger the discount will be." | html }}
+					{{ $.T "You may donate through <b>PayPal</b> (or credit/debit card linked to PayPal). Use the slider below to choose the amount of months you'd like to have the donor benefits, and the cost will be instantly calculated. Remember that if, for instance, you choose to donate € 4 instead of € 3.51, you will only be given one donor month." | html }}
 				</p>
 				<div id="months-slider" style="margin: 0 auto; max-width: 500px"></div>
 				<br>
@@ -127,7 +127,7 @@ AdditionalJS=https://cdnjs.cloudflare.com/ajax/libs/noUiSlider/9.0.0/nouislider.
 								<input type="hidden" name="option_select{{ . }}" value="{{ $months }} month{{ if . }}s{{ end }}">
 								<input type="hidden" name="option_amount{{ . }}" value="{{ calculateDonorPrice $months }}">
 							{{ end }}
-							<input type="hidden" name="on1" value="Akatsuki user to give donor">
+							<input type="hidden" name="on1" value="cmyu!relax user to give donor">
 							<input type="hidden" name="amount" value="{{ calculateDonorPrice 1 }}" id="paypal-amt">
 							<div class="ui fluid labeled action input">
 								<div class="ui label">
@@ -138,7 +138,7 @@ AdditionalJS=https://cdnjs.cloudflare.com/ajax/libs/noUiSlider/9.0.0/nouislider.
 							</div>
 							{{ $ief }}
 							<input type="hidden" 
-name="business" value="cmyuisuki@gmail.com">
+name="business" value="cmyuiosu@gmail.com">
 							<input type="hidden" name="cmd" value="_xclick">
 							<input type="hidden" name="lc" value="GB">
 							<input type="hidden" name="no_note" value="0">
@@ -150,12 +150,10 @@ name="business" value="cmyuisuki@gmail.com">
 				<h4 class="ui horizontal divider header">
 					{{ $.T "I've donated, now what?" }}
 				</h4>
-				<p>
-				{{ $.T "Please contact cmyui directly, preferrably via discord/ingame, or if needed, via email: cmyui@akatsuki.pw" | html }}
-			</p>
+				{{ $.T "You'll have to wait until we verify and process your payment. It can take up to <b>12 hours</b>. If 12 hours have passed and you still haven't received your Donor tag, contact a <b>Dev/Community Manager</b> in our Discord server or send an email to <b><a href=\"mailto:cmyuiosu@gmail.com\">cmyuiosu@gmail.com</a></b>. Once we have processed your payment, you'll receive an <b>email</b> to the address you've used to sign up and you'll get <b>all the donor privileges, except the Discord ones</b>. To get the Discord donor privileges, go <a href=\"/settings/discord\">here</a>." | html }}
 			{{ else }}
 				<div class="ui divider"></div>
-				<h1 class="ui center aligned header">{{ $.T "Please log in before purchasing supporter" }}</h1>
+				<h1 class="ui center aligned header">{{ $.T "Please log in to get supporter" }}</h1>
 			{{ end }}
 		</div>
 	{{ end }}
