--- a/static/ripple.css
+++ b/static/ripple.css
@@ -1,19 +1,17 @@
+/*
+ * This file contains Ripple's CSS, that little that is needed for ripple's custom elements.
+ */
 .ripple.logo {
 	padding-top: 4px;
 }
 
 .huge.heading {
-	background-color: #2e2e2e;
 	width: 100%;
 	margin-bottom: 20px;
+	position: relative;
 	background-repeat: no-repeat;
 	background-position: center bottom;
 	background-size: cover;
-	display: flex;
-	align-items: flex-end;
-}
-.huge.heading.right .ui.container {
-	text-align: right;
 }
 @media (max-width: 700px) {
 	.huge.heading {
@@ -21,7 +19,12 @@
 	}
 	.huge.heading h1 {
 		font-size: 24pt;
-		padding-bottom: 10px;
+		bottom: 10px;
+		left: 20px;
+	}
+	.huge.heading.right h1 {
+		left: auto;
+		right: 40px;
 	}
 }
 @media (min-width: 700px) {
@@ -30,14 +33,23 @@
 	}
 	.huge.heading h1 {
 		font-size: 40pt;
-		padding-bottom: 15px;
+		bottom: 15px;
+		left: 40px;
+	}
+	.huge.heading.right h1 {
+		right: 40px;
+		left: auto;
 	}
 }
 
 .huge.heading h1 {
+	position: absolute;
 	color: #f9f9f9;
 	text-shadow: 0 2px 10px #000;
+	margin-bottom: 0px;
+	z-index: 1000001; /* getting bigger every year */
 }
+
 
 .main.wrapper {
 	padding-bottom: 30px;
@@ -172,10 +184,10 @@ body.ds .white.background {
 }
 
 .subtitle, .about.title {
-	color: rgba(0,0,0,.6);
+	color: rgba(255,255,255,.6);
 }
 .subtitle b {
-	color: rgba(0,0,0,.87);
+	color: rgba(255,255,255,.87);
 }
 
 /* ds = Dark Site */
@@ -371,30 +383,26 @@ a.camouflaged:hover {
 	margin: 0 auto;
 }
 
-/* column in a grid which is both vertically and horizontally centered */
-.ui.grid > .row > .full-centered.column {
-	display: inline-flex;
-	justify-content: center;
-	align-items: center;
+
+
+.owner
+{
+    color: SpringGreen;
+    text-shadow:
+    -1px -1px 0 #006400,
+    1px -1px 0 #006400,
+    -1px 1px 0 #006400,
+    1px 1px 0 #006400;
+    
 }
 
-/* SO, of course: https://stackoverflow.com/a/8612047/5328069 */
-img.achievement {
-	-webkit-filter: drop-shadow(0 5px 5px #777);
-	filter: drop-shadow(0 5px 5px #777);
+.dev
+{
+    color: DodgerBlue;
+    text-shadow:
+    -1px -1px 0 #104e8b,
+    1px -1px 0 #104e8b,
+    -1px 1px 0 #104e8b,
+    1px 1px 0 #104e8b;
+    
 }
-img.locked-achievement {
-	-webkit-filter: brightness(0) drop-shadow(0 5px 5px #777);
-	filter: brightness(0) drop-shadow(0 5px 5px #777);
-	-webkit-transition: all 500ms ;
-    -moz-transition: all 500ms ;
-    -ms-transition: all 500ms ;
-    -o-transition: all 500ms ;
-    transition: all 500ms ;
-}
-img.locked-achievement:hover {
-	filter: gray; /* IE6-9 */
-	-webkit-filter: brightness(0.5) drop-shadow(0 5px 5px #777);
-	filter: brightness(0.5) drop-shadow(0 5px 5px #777);
-}
-
