--- a/templates/base.html
+++ b/templates/base.html
@@ -40,7 +40,7 @@
 				<noscript>Research has proven this website works probably more than 7% better if you have JavaScript enabled.</noscript>
 				{{ if and .Context.User.Username (not (has .Context.User.Privileges 1)) }}
 					<div class="ui warning message">
-						{{ $.T "Your account is currently in restricted mode. You will not be able to perform certain actions, and your profile can only be seen by you and by Akatsuki's staff. If you believe this was a mistake, or a month has passed since you first saw this, then you can send an appeal to <a href=mailto:support@akatsuki.pw>support@akatsuki.pw</a>." | html }}
+						{{ $.T "Your account is currently in restricted mode. You will not be able to perform certain actions, and your profile can only be seen by you and by Vipsu's staff. If you believe this was a mistake, or a month has passed since you first saw this, then you can send an appeal to <a href=mailto:support@Vipsu.ml>support@Vipsu.pml</a>." | html }}
 					</div>
 				{{ end }}
 				{{ if .Messages }}
