--- a/templates/support.html
+++ b/templates/support.html
@@ -1,6 +1,6 @@
 {{/*###
 Handler=/donate
-TitleBar=Support Akatsuki
+TitleBar=Support Vipsu
 KyutGrill=fundmyautism.jpg
 AdditionalJS=https://cdnjs.cloudflare.com/ajax/libs/noUiSlider/9.0.0/nouislider.min.js
 */}}
@@ -32,16 +32,16 @@ AdditionalJS=https://cdnjs.cloudflare.com/ajax/libs/noUiSlider/9.0.0/nouislider.
 			</div>
 			<div class="ui segment">
 				<h3 class="ui header no top margin">
-					<i class="money icon"></i><div class="content">{{ $.T "Akatsuki is not cheap to run." }}</div>
+					<i class="money icon"></i><div class="content">{{ $.T "Vipsu is not cheap to run." }}</div>
 				</h3>
 				<blockquote>
-					{{ $.T "While we provide this service for free, we still have to pay for it, and if we always took the money out of our own pockets, 1. we would be broke, 2. we wouldn't be able to upgrade our hardware to accomodate our users. While we do have loads of software optimisations that allow us to have Akatsuki run crazy fast while still being on not so high-end hardware, the more users we have, the higher-end our hardware needs to be. So we are asking you for help on this :)." }}
+					{{ $.T "While we provide this service for free, we still have to pay for it, and if we always took the money out of our own pockets, 1. we would be broke, 2. we wouldn't be able to upgrade our hardware to accomodate our users. While we do have loads of software optimisations that allow us to have Vipsu run crazy fast while still being on not so high-end hardware, the more users we have, the higher-end our hardware needs to be. So we are asking you for help on this :)." }}
 				</blockquote>
 				<h3 class="ui header">
 					<i class="book icon"></i><div class="content">{{ $.T "We are still students." }}</div>
 				</h3>
 				<blockquote>
-					{{ $.T "Akatsuki developers, and most of the Akatsuki staff, do not have a day job. This means that we get most of our income as students from doing small jobs as \"freelancers\" every so often, or, you know, allowance." }}
+					{{ $.T "Vipsu developers, and most of the Vipsu staff, do not have a day job. This means that we get most of our income as students from doing small jobs as \"freelancers\" every so often, or, you know, allowance." }}
 				</blockquote>
 				<h3 class="ui header">
 					<i class="mouse pointer icon"></i><div class="content">{{ $.T "We do not have ads. And never will." }}</div>
@@ -127,7 +127,7 @@ AdditionalJS=https://cdnjs.cloudflare.com/ajax/libs/noUiSlider/9.0.0/nouislider.
 								<input type="hidden" name="option_select{{ . }}" value="{{ $months }} month{{ if . }}s{{ end }}">
 								<input type="hidden" name="option_amount{{ . }}" value="{{ calculateDonorPrice $months }}">
 							{{ end }}
-							<input type="hidden" name="on1" value="Akatsuki user to give donor">
+							<input type="hidden" name="on1" value="Vipsu user to give donor">
 							<input type="hidden" name="amount" value="{{ calculateDonorPrice 1 }}" id="paypal-amt">
 							<div class="ui fluid labeled action input">
 								<div class="ui label">
@@ -138,7 +138,7 @@ AdditionalJS=https://cdnjs.cloudflare.com/ajax/libs/noUiSlider/9.0.0/nouislider.
 							</div>
 							{{ $ief }}
 							<input type="hidden" 
-name="business" value="cmyuisuki@gmail.com">
+name="business" value="randoomlp@gmail.com">
 							<input type="hidden" name="cmd" value="_xclick">
 							<input type="hidden" name="lc" value="GB">
 							<input type="hidden" name="no_note" value="0">
@@ -151,7 +151,7 @@ name="business" value="cmyuisuki@gmail.com">
 					{{ $.T "I've donated, now what?" }}
 				</h4>
 				<p>
-				{{ $.T "Please contact cmyui directly, preferrably via discord/ingame, or if needed, via email: cmyui@akatsuki.pw" | html }}
+				{{ $.T "Please contact cmyui directly, preferrably via discord/ingame, or if needed, via email: randoomlp@gmail.com" | html }}
 			</p>
 			{{ else }}
 				<div class="ui divider"></div>
