--- a/templates/supporte.html
+++ b/templates/supporte.html
@@ -1,6 +1,6 @@
 {{/*###
 Handler=/donate2
-TitleBar=Support cmyui.com
+TitleBar=Support Vipsu
 KyutGrill=donate2.png
 AdditionalJS=https://cdnjs.cloudflare.com/ajax/libs/noUiSlider/9.0.0/nouislider.min.js
 */}}
@@ -32,16 +32,16 @@ AdditionalJS=https://cdnjs.cloudflare.com/ajax/libs/noUiSlider/9.0.0/nouislider.
 			</div>
 			<div class="ui segment">
 				<h3 class="ui header no top margin">
-					<i class="money icon"></i><div class="content">{{ $.T "Germanzu is not cheap to run." }}</div>
+					<i class="money icon"></i><div class="content">{{ $.T "Vipsu is not cheap to run." }}</div>
 				</h3>
 				<blockquote>
-					{{ $.T "While we provide this service for free, we still have to pay for it, and if we always took the money out of our own pockets, 1. we would be broke, 2. we wouldn't be able to upgrade our hardware to accomodate our users. While we do have loads of software optimisations that allow us to have Germanzu run crazy fast while still being on not so high-end hardware, the more users we have, the higher-end our hardware needs to be. So we are asking you for help on this :)." }}
+					{{ $.T "While we provide this service for free, we still have to pay for it, and if we always took the money out of our own pockets, 1. we would be broke, 2. we wouldn't be able to upgrade our hardware to accomodate our users. While we do have loads of software optimisations that allow us to have Vipsu run crazy fast while still being on not so high-end hardware, the more users we have, the higher-end our hardware needs to be. So we are asking you for help on this :)." }}
 				</blockquote>
 				<h3 class="ui header">
 					<i class="book icon"></i><div class="content">{{ $.T "We are still students." }}</div>
 				</h3>
 				<blockquote>
-					{{ $.T "Germanzu developers, and most of the cmyu!relax staff, do not have a day job. This means that we get most of our income as students from doing small jobs as \"freelancers\" every so often, or, you know, allowance." }}
+					{{ $.T "Vipsu developers, and most of the cmyu!relax staff, do not have a day job. This means that we get most of our income as students from doing small jobs as \"freelancers\" every so often, or, you know, allowance." }}
 				</blockquote>
 				<h3 class="ui header">
 					<i class="mouse pointer icon"></i><div class="content">{{ $.T "We do not have ads. And never will." }}</div>
@@ -138,7 +138,7 @@ AdditionalJS=https://cdnjs.cloudflare.com/ajax/libs/noUiSlider/9.0.0/nouislider.
 							</div>
 							{{ $ief }}
 							<input type="hidden" 
-name="business" value="cmyuiosu@gmail.com">
+name="business" value="randoomlp@gmail.com">
 							<input type="hidden" name="cmd" value="_xclick">
 							<input type="hidden" name="lc" value="GB">
 							<input type="hidden" name="no_note" value="0">
@@ -150,7 +150,7 @@ name="business" value="cmyuiosu@gmail.com">
 				<h4 class="ui horizontal divider header">
 					{{ $.T "I've donated, now what?" }}
 				</h4>
-				{{ $.T "You'll have to wait until we verify and process your payment. It can take up to <b>12 hours</b>. If 12 hours have passed and you still haven't received your Donor tag, contact a <b>Dev/Community Manager</b> in our Discord server or send an email to <b><a href=\"mailto:cmyuiosu@gmail.com\">cmyuiosu@gmail.com</a></b>. Once we have processed your payment, you'll receive an <b>email</b> to the address you've used to sign up and you'll get <b>all the donor privileges, except the Discord ones</b>. To get the Discord donor privileges, go <a href=\"/settings/discord\">here</a>." | html }}
+				{{ $.T "You'll have to wait until we verify and process your payment. It can take up to <b>12 hours</b>. If 12 hours have passed and you still haven't received your Donor tag, contact a <b>Dev/Community Manager</b> in our Discord server or send an email to <b><a href=\"mailto:randoomlp@gmail.com\">randoomlp@gmail.com</a></b>. Once we have processed your payment, you'll receive an <b>email</b> to the address you've used to sign up and you'll get <b>all the donor privileges, except the Discord ones</b>. To get the Discord donor privileges, go <a href=\"/settings/discord\">here</a>." | html }}
 			{{ else }}
 				<div class="ui divider"></div>
 				<h1 class="ui center aligned header">{{ $.T "Please log in to get supporter" }}</h1>
